Changement des contrôles + Menu associé

--- a/TetrisProject/src/TetrisLang_en_EN.properties
+++ b/TetrisProject/src/TetrisLang_en_EN.properties
@@ -10,4 +10,11 @@ score = Score
 tetris = Tetris
 lang = Language
 controls = Controls
-
+selectcontrol = Enter a key
+left = Left
+right = Right
+forward = Forward
+pause = Pause
+rotate = Rotate
+command = Command
+key = Key
