--- a/TetrisProject/src/TetrisLang_fr_FR.properties
+++ b/TetrisProject/src/TetrisLang_fr_FR.properties
@@ -10,4 +10,11 @@ score = Score
 tetris = Tetris
 lang = Langue
 controls = Contrôles
-
+selectcontrol = Entrez une touche
+left = Gauche
+right = Droite
+forward = Avancer
+pause = Pause
+rotate = Tourner
+command = Commande
+key = Touche
