Affichage de l'écran de jeu

--- a/TetrisProject/bin/TetrisLang_fr_FR.properties
+++ b/TetrisProject/bin/TetrisLang_fr_FR.properties
@@ -20,3 +20,5 @@ command = Commande
 key = Touche
 cancel = Annuler
 apply = Appliquer
+setpause1 = Appuyez sur la touche
+setpause2 = pour mettre le jeu en pause.
