Le plus gros commit du monde. Model réécrit en partie, fonctions du jeu faites et compléments à terminer.

--- a/TetrisProject/bin/TetrisLang_en_EN.properties
+++ b/TetrisProject/bin/TetrisLang_en_EN.properties
@@ -23,3 +23,5 @@ cancel = Cancel
 apply = Apply
 setpause1 = Enter the
 setpause2 = key to pause the game.
+endgame = Game over. Your score is %d and you made %d tetris.
+retry = Retry
