--- a/TetrisProject/src/TetrisLang_en_EN.properties
+++ b/TetrisProject/src/TetrisLang_en_EN.properties
@@ -23,3 +23,5 @@ cancel = Cancel
 apply = Apply
 setpause1 = Enter the
 setpause2 = key to pause the game.
+endgame = Game over. Your score is %d and you made %d tetris.
+retry = Retry
