--- a/TetrisProject/bin/TetrisLang_en_EN.properties
+++ b/TetrisProject/bin/TetrisLang_en_EN.properties
@@ -23,5 +23,6 @@ cancel = Cancel
 apply = Apply
 setpause1 = Enter the
 setpause2 = key to pause the game.
+setpause3 = to resume.
 endgame = Game over. Your score is %d and you made %d tetris.
 retry = Retry
