--- a/TetrisProject/src/TetrisLang_fr_FR.properties
+++ b/TetrisProject/src/TetrisLang_fr_FR.properties
@@ -23,5 +23,6 @@ cancel = Annuler
 apply = Appliquer
 setpause1 = Appuyez sur la touche
 setpause2 = pour mettre le jeu en pause.
+setpause3 = pour reprendre.
 endgame = Partie terminée. Votre score est de %d et vous avez réalisé %d tetris.
 retry = Recommencer
