--- a/TetrisProject/src/TetrisLang_en_EN.properties
+++ b/TetrisProject/src/TetrisLang_en_EN.properties
@@ -26,3 +26,8 @@ setpause2 = key to pause the game.
 setpause3 = to resume.
 endgame = Game over. Your score is %d and you made %d tetris.
 retry = Retry
+scoresaver = <html>You arrived at the %d%s place!<br>If you want to save your score, please enter your name:</html>
+st = st
+nd = nd
+rd = rd
+th = th
