--- a/TetrisProject/src/TetrisLang_fr_FR.properties
+++ b/TetrisProject/src/TetrisLang_fr_FR.properties
@@ -26,3 +26,8 @@ setpause2 = pour mettre le jeu en pause.
 setpause3 = pour reprendre.
 endgame = Partie terminée. Votre score est de %d et vous avez réalisé %d tetris.
 retry = Recommencer
+scoresaver = <html>Vous êtes arrivé à la %d%s place!<br>Si vous souhaitez enregistrer votre score, entrez votre nom:</html>
+st = ère
+nd = ème
+rd = ème
+th = ème
